WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
242864
REGRESSION(
252534@main
): [ macOS ] TestWebKitAPI.ServiceWorkers.ServiceWorkerAndCacheStorageSpecificDirectories is constantly timing out
https://bugs.webkit.org/show_bug.cgi?id=242864
Summary
REGRESSION(252534@main): [ macOS ] TestWebKitAPI.ServiceWorkers.ServiceWorker...
Hercules Hjalmarsson
Reported
2022-07-18 10:17:40 PDT
TestWebKitAPI.ServiceWorkers.ServiceWorkerAndCacheStorageSpecificDirectories Is constantly timing out on macOS ToT and since
252534@main
. HISTORY:
https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.ServiceWorkers.ServiceWorkerAndCacheStorageSpecificDirectories
The diff stdio output is captured locally. DIFF: Test suite failed Timeout TestWebKitAPI.ServiceWorkers.ServiceWorkerAndCacheStorageSpecificDirectories ERROR: Could not create a sandbox extension for '/var/tmp' /Volumes/Data/worker/trunk---debug-archive/build/OpenSource/Source/WebKit/Shared/Cocoa/SandboxExtensionCocoa.mm(231) : static std::optional<Handle> WebKit::SandboxExtension::createHandleWithoutResolvingPath(WTF::StringView, WebKit::SandboxExtension::Type) ERROR: Could not create a sandbox extension for '/var/tmp' /Volumes/Data/worker/trunk---debug-archive/build/OpenSource/Source/WebKit/Shared/Cocoa/SandboxExtensionCocoa.mm(231) : static std::optional<Handle> WebKit::SandboxExtension::createHandleWithoutResolvingPath(WTF::StringView, WebKit::SandboxExtension::Type) 2022-07-18 12:12:11.531 com.apple.WebKit.WebContent.Development[28466:5742823] ApplePersistence=NO ERROR: File failed to delete. Error message: Operation not permitted /Volumes/Data/worker/trunk---debug-archive/build/OpenSource/Source/WTF/wtf/posix/FileSystemPOSIX.cpp(269) : bool WTF::FileSystemImpl::deleteFile(const WTF::String &) DIFF URL:
https://ews-build.webkit.org/#/builders/3/builds/76571/steps/14/logs/stdio
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-07-18 10:18:36 PDT
<
rdar://problem/97205394
>
Hercules Hjalmarsson
Comment 2
2022-07-18 10:21:25 PDT
I was able to bisect the regression point to changes made in
252534@main
running command: run-api-tests TestWebKitAPI.ServiceWorkers.ServiceWorkerAndCacheStorageSpecificDirectories
Sihui Liu
Comment 3
2022-07-18 16:02:16 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/2527
EWS
Comment 4
2022-07-19 17:41:46 PDT
Committed
252625@main
(0915e758ce09): <
https://commits.webkit.org/252625@main
> Reviewed commits have been landed. Closing PR #2527 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug