Cherry-pick 0915e758ce09. rdar://problem/97205394

REGRESSION(252534@main): [ macOS ] TestWebKitAPI.ServiceWorkers.ServiceWorkerAndCacheStorageSpecificDirectories is constantly timing out
    https://bugs.webkit.org/show_bug.cgi?id=242864
    rdar://problem/97205394

    Reviewed by Chris Dumez.

    We didn't set resolved configuration correctly in WebsiteDataStore::resolveDirectoriesIfNecessary, and the directories
    were not resolved.

    * Source/WebKit/UIProcess/Network/NetworkProcessProxy.cpp:
    (WebKit::NetworkProcessProxy::retrieveCacheStorageParameters):
    * Source/WebKit/UIProcess/WebsiteData/WebsiteDataStore.cpp:
    (WebKit::WebsiteDataStore::resolveDirectoriesIfNecessary):

    Canonical link: https://commits.webkit.org/252625@main

Canonical link: https://commits.webkit.org/252432.92@safari-7614.1.25.0-branch